--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.15.0",
+    "eslint-config-universe": "^10.0.0",
+    "prettier": "^2.6.2"
   },
   "private": true
 }
