--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "modal": "^1.2.0",
     "native-base": "^3.4.5",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
+    "react-modal": "^3.15.1",
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1284.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
