--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.5",
+    "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "date-fns": "^2.28.0",
@@ -25,6 +25,7 @@
     "react-modal": "^3.15.1",
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1284.0",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.1",
