--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
